--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <footer>
+        <img src="./img/mar_footer1.jpg">
+        <img src="./img/mar_footer2.jpg">   
+        <img src="./img/mar_footer3.jpg">
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
