--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
-        <img src="./img/mar_footer1.jpg">
-        <img src="./img/mar_footer2.jpg">   
-        <img src="./img/mar_footer3.jpg">
-    </footer>
+   <main>
+    <article>
+    <h1> Mergulho é a melhor forma de conhecer a vida marinha</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo voluptatum molestias modi quam hic nesciunt illo, ea voluptatibus exercitationem aspernatur natus </p>
+    <img src="img/mergulho-livre-1-1204x768.jpg" alt="mergulho">
+     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima eius debitis consequuntur mollitia veniam, ut laborum illo deserunt labore unde molestiae, magnam facilis neque! Quis sed voluptatem nihil esse fugiat Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, totam labore. Quaerat cumque minima vitae, voluptatibus et, nam eius fuga iure officia rerum recusandae iusto magni totam nihil in at?</p>
+    </article>
+   </main>
     <script src="script.js"></script>
 </body>
 </html>
